--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -1,8 +1,13 @@
 <%= form_for(:user, :html => { :class => 'form-inline'}, :url => session_path(:user)) do |f| %>
-  <%= f.text_field :email, required: false, autofocus: true,class:"form-control", placeholder:"Email" %>
-  <%= f.password_field :password, class:"form-control", placeholder: "Password" %>
+  <div class="form-group">
+    <%= f.text_field :email, required: false, autofocus: true,class:"form-control", placeholder:"Email" %>
+  </div>
+  <div class="form-group">
+    <%= f.password_field :password, class:"form-control", placeholder: "Password" %>
+  </div>
   <%= f.check_box :remember_me %>
   <%= f.label :remember_me %>
+  <br />
   <%= f.submit 'Sign in', class:"btn btn-success" %>
 <% end %>
 
