Create front end for sign in page

--- a/app/assets/stylesheets/components/_wrapper.scss
+++ b/app/assets/stylesheets/components/_wrapper.scss
@@ -13,8 +13,17 @@
   border: 1px solid black;
 }
 
-#btn-signup {
+.btn-signup {
   border-radius: 4px;
   border: 1px solid black;
+  margin: 5px;
 }
+
+#btn-login {
+  border-radius: 4px;
+  border: 1px solid black;
+  margin: 5px;
+}
+
+
 
