--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,7 @@
     </div>
     <% end %>
   </div>
+  <%= link_to "Sign up with Facebook", user_facebook_omniauth_authorize_path, class:'btn btn-primary' %>
 </div>
 
 
