--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -9,5 +9,6 @@
   <%= f.label :remember_me %>
   <br />
   <%= f.submit 'Sign in', class:"btn btn-success" %>
+  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:'btn btn-primary' %>
 <% end %>
 
