--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,9 +22,10 @@
       <div class="navbar-wagon-item">
         <div class="dropdown">
         <% if user_signed_in? && current_user.facebook_picture_url %>
-          <%= image_tag current_user.facebook_picture_url, height: 50, width: 50 %>
-        <% end %>
+          <%= image_tag current_user.facebook_picture_url, class:"avatar avatar-large dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+        <% else %>
           <%= image_tag "http://placehold.it/30x30", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+        <% end %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
               <%= link_to "#" do %>
@@ -56,10 +57,9 @@
           <%= render 'shared/login_form' %>
         </div>
       </div>
+      <%= link_to "Sign up", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
     <% end %>
 
-    <!-- Button (call-to-action) -->
-    <%= link_to "Sign up", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
