--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,20 @@
-<h2>Forgot your password?</h2>
+<div class="text-center">
+
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
-
-  <div class="form-inputs">
+  <div class="container">
+  <h2>Forgot your password?</h2>
+  <div class="form-inputs grey-wrapper wrapper text-left">
     <%= f.input :email, required: true, autofocus: true %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "Send me reset password instructions", class:"btn btn-default", id:"btn-send-forgot-mail" %>
   </div>
-<% end %>
+  </div>
 
-<%= render "devise/shared/links" %>
+<% end %>
+</div>
+
+
