changed buttons signup and hidde form for email sign up

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -21,3 +21,9 @@
   border: 1px solid black;
   margin: 5px;
 }
+
+#btn-signup-email {
+  border-radius: 4px;
+  border: 1px solid black;
+  margin: 5px;
+}
