--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,10 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
   <div class="col-xs-6 col-xs-offset-3">
+    <%= image_tag current_user.profile_pic, class: "avatar", height: 50, width: 50 %>
     <div class="form-inputs">
+      <%= f.input :profile_pic_cache, as: :hidden %>
+      <%= f.input :profile_pic %>
       <%= f.input :name, required: true, autofocus: true %>
       <%= f.input :email, required: true %>
       <%= f.input :gender,
