Create bathrooms index and bathroom show

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -28,3 +28,18 @@
   margin: 5px;
 }
 
+#btn-show {
+  border-radius: 4px;
+  border: 1px solid black;
+  margin: 5px;
+}
+
+#btn-booked {
+  border-radius: 4px;
+  border: 1px solid black;
+  margin: 5px;
+  background-color: red;
+  color: white;
+  text-decoration: none;
+}
+
