--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -43,3 +43,29 @@
   text-decoration: none;
 }
 
+.bg-text {
+  background: #4a4a4a;
+}
+.bg-email {
+  background: #aeaeae;
+}
+.bg-twitter {
+  background: #00a3e1;
+}
+.bg-facebook {
+  background: #3b5998;
+}
+
+.bg-text:hover {
+  background: #4a4a4a;
+}
+.bg-email:hover {
+  background: #aeaeae;
+}
+.bg-twitter:hover {
+  background: #00a3e1;
+}
+.bg-facebook:hover {
+  background: #3b5998;
+}
+
