--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
     <%= yield %>
 
-    <%= javascript_include_tag "https://maps.google.com/maps/api/js?key=AIzaSyDHsCmvml8J-ddRpNa-AuTvvSVHnTmLxY4" %>
+    <%= javascript_include_tag "https://maps.google.com/maps/api/js" %>
     <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/markerclusterer/src/markerclusterer_compiled.js" %>
     <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js" %>
     <%= javascript_include_tag 'application' %>
