--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -2,9 +2,11 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-$base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Raleway", "Helvetica", "sans-serif";
+@import url("https://fonts.googleapis.com/css?family=EB+Garamond|Quicksand");
+$base-font: "EB Garamond", "Helvetica", "sans-serif";
+$header-font: "Quicksand", "Helvetica", "sans-serif";
+
+
 
 // Local fonts (uncomment following lines)
 // @font-face {
