--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -5,12 +5,12 @@
 <p>Address: <%= @bathroom.address %></p>
 <p>Price: <%= @bathroom.price %></p>
 <p>Accepted gender: <%= @bathroom.accepted_gender %></p>
+
+ <div id="map" style="width: 100%; height: 250px; margin:10px auto 0"></div>
  </div>
   <p><%= link_to 'Instant Book', bathroom_path(), class: 'btn btn-alarm', id:"btn-booked" %></p>
 </div>
 </div>
-
-<div id="map" style="width: 100%; height: 600px;"></div>
 
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
