--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,8 +33,13 @@
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
-                  <%= link_to t(".profile", default: "Home"), root_path, class:"fa fa-home" %>
+              <%= link_to  do %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "My bathrooms") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to bathrooms_path do %>
+                  <i class="fa fa-home"></i> <%= t(".profile", default: "Bathrooms") %>
               <% end %>
             </li>
             <li>
