--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -20,10 +20,27 @@
       <h4>Price:</h4>
       <p><%= @bathroom.price %>€</p>
 
-
+      <div id="map" style="width: 100%; height: 250px; margin:10px auto 0"></div>
     </div>
     <p><%= link_to 'Instant Book', bathroom_path(), class: 'btn btn-alarm', id:"btn-booked" %></p>
   </div>
 </div>
 
-
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    $(document).on('ready', function() {
+      var handler = Gmaps.build('Google');
+      handler.buildMap({ internal: { id: 'map' } }, function() {
+        markers = handler.addMarkers(<%= raw @hash.to_json %>);
+        center = { lat: <%= @bathroom.latitude %>, lng: <%= @bathroom.longitude %> }
+        handler.bounds.extendWith(markers);
+        handler.fitMapToBounds();
+        if (markers.length == 0) {
+          handler.getMap().setZoom(2);
+        } else if (markers.length == 1) {
+          handler.getMap().setZoom(14);
+        }
+      });
+    });
+  <% end %>
+<% end %>
