--- a/app/views/bathrooms/index.html.erb
+++ b/app/views/bathrooms/index.html.erb
@@ -1,10 +1,34 @@
 <div class="text-center ">
   <h1>Bathrooms </h1>
+</div>
+<div class="row-fluid">
 
-  <div class="container">
-    <% @bathrooms.each do |bathroom| %>
-    <%= render "shared/bathroom", bathroom: bathroom %>
-    <p><%= link_to 'Show', bathroom_path(bathroom), class: 'btn btn-default btn-show' %></p>
-    <% end %>
+<div class="col-md-6">
+  <div id="map" style="width:100%; height:600px"></div>
+</div>
+  <div class="col-md-6">
+      <% @bathrooms.each do |bathroom| %>
+      <%= render "shared/bathroom", bathroom: bathroom %>
+      <p><%= link_to 'Show', bathroom_path(bathroom), class: 'btn btn-default btn-show' %></p>
+      <% end %>
   </div>
 </div>
+
+  <!-- MAP JAVASCRIPT - PROVISORY ADD LOCATION API LATER-->
+ <% content_for(:after_js) do %>
+   <script type="text/javascript">
+     $(document).on('ready', function() {
+       var handler = Gmaps.build('Google');
+       handler.buildMap({ internal: { id: 'map' } }, function(){
+         markers = handler.addMarkers(<%= raw @hash.to_json %>);
+         handler.bounds.extendWith(markers);
+         handler.fitMapToBounds();
+         if (markers.length == 0) {
+           handler.getMap().setZoom(2);
+         } else if (markers.length == 1) {
+           handler.getMap().setZoom(14);
+         }
+       });
+     });
+   </script>
+ <% end %>
