add edit profile button and css in page edit

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,8 @@
       <h4>Gender:</h4>
       <p><%= @user.gender%></p>
     </div>
-    </div>
+
+     <p> <%= link_to "Edit profile", edit_user_registration_path, class:"btn btn-default btn-edit-profil"%></p>
+
+  </div>
 </div>
