--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -34,6 +34,13 @@
   margin: 5px;
 }
 
+.btn-edit-profil {
+  border-radius: 4px;
+  border: 1px solid black;
+  margin: 5px;
+  text-decoration: none;
+}
+
 #btn-booked {
   border-radius: 4px;
   border: 1px solid black;
