--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,30 +1,39 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="text-center ">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
-  <div class="col-xs-6 col-xs-offset-3">
-    <%= image_tag current_user.profile_pic, class: "avatar", height: 50, width: 50 %>
-    <div class="form-inputs">
-      <%= f.input :profile_pic_cache, as: :hidden %>
-      <%= f.input :profile_pic %>
-      <%= f.input :name, required: true, autofocus: true %>
-      <%= f.input :email, required: true %>
-      <%= f.input :gender,
-                  :collection => [['Male', 'Male'], ['Female', 'Female']],
-                  :as => :radio_buttons,
-                  :item_wrapper_class => 'radio-inline' %>
+  <div class="container">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+    <div class="col-xs-6 col-xs-offset-3">
+      <div class="form-inputs grey-wrapper wrapper text-left">
+        <div class="text-center">
+          <%= image_tag current_user.profile_pic, class: "avatar", height: 50, width: 50 %>
 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <%= f.input :profile_pic_cache, as: :hidden %>
+
+          <%= f.input :profile_pic %>
+        </div>
+        <%= f.input :name, required: true, autofocus: true %>
+        <%= f.input :email, required: true %>
+        <%= f.input :gender,
+        :collection => [['Male', 'Male'], ['Female', 'Female']],
+        :as => :radio_buttons,
+        :item_wrapper_class => 'radio-inline' %>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-      <% end %>
+        <% end %>
 
 
+      </div>
     </div>
+  </div>
 
-    <div class="form-actions">
-      <%= f.button :submit, "Update" %>
-    </div>
+  <p> <%= f.button :submit, "Update", class:"btn btn-default btn-edit-profil" %></p>
+
   <% end %>
+
+
 
   <h3>Edit password</h3>
   <%= link_to "Change password", edit_user_password_path %>
@@ -33,4 +42,7 @@
   <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
   <%= link_to "Back", :back %>
-  </div>
+</div>
+</div>
+
+
