--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+
+
 // Graphical variables
 @import "config/variables";
 @import "config/bootstrap_variables";
@@ -15,3 +17,9 @@
 @import "vendor/index";
 @import "bathrooms/form";
 @import "bathrooms/show";
+
+/* ...
+*= require_self
+*= require_tree .
+*= require jquery-ui/datepicker
+*/
