--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -22,7 +22,14 @@
 
       <div id="map" style="width: 100%; height: 250px; margin:10px auto 0"></div>
     </div>
-    <p><%= link_to 'Instant Book', bathroom_path(), class: 'btn btn-alarm', id:"btn-booked" %></p>
+    <%= simple_form_for [@bathroom, Booking.new] do |f| %>
+      <%= f.fields_for :bookings do |b| %>
+        <%= b.text_field :book_time, :value=>Date.today.strftime('%d-%m-%Y'), :id =>"dp5" %>
+        <% end %>
+      <div class="form-actions">
+        <%= f.button :submit %>
+      </div>
+    <% end %>
   </div>
 </div>
 
