--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -8,7 +8,7 @@
   <%= f.check_box :remember_me %>
   <%= f.label :remember_me %>
   <br />
-  <%= f.submit 'Sign in', class:"btn btn-success" %>
-  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:'btn btn-primary' %>
+  <%= f.submit 'Sign in', class:"btn btn-success btn-signup" %>
+  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:'btn btn-primary btn-signup' %>
 <% end %>
 
