--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
-<div class="footer-wrapper text-center">
-<div class="share-links">
+<div class="footer-wrapper text row">
+<div class="share-links text-center col-xs-12">
   <a href="#" class="share-link bg-facebook btn btn-default ">
     <i class="fa fa-facebook"></i>
   </a>
