--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,1 +1,21 @@
 // Your footer style
+.share-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.share-link {
+  flex: 0 0 10%;
+  color: white;
+  font-size: 18px;
+  text-align: center;
+  border-radius: 4px;
+  border: 1px solid black;
+  margin: 5px;
+}
+
+.footer-wrapper {
+  background-color:#FFFFFF;
+  margin-top: 20px;
+  border: 1px;
+}
