--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
   <body>
+
     <%= render 'shared/navbar' %>
+    <div class="body-wrapper">
     <%= render 'shared/flashes' %>
 
     <%= yield %>
 
-
+    </div>
     <%= render 'shared/footer' %>
 
     <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&key=AIzaSyD4SkOYUkREjFIXcpDW47vUbHGbT5cMci4" %>
