Created my bathrooms

--- a/app/views/bathrooms/edit.html.erb
+++ b/app/views/bathrooms/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center ">
-  <h2>New Bathroom</h2>
+  <h2>Edit Bathroom</h2>
   <div class="container" id="add_bathroom">
     <%= render 'form' %>
     </div>
