--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,7 +38,7 @@
               <% end %>
             </li>
             <li>
-              <%= link_to  do %>
+              <%= link_to users_bathrooms_path do %>
                 <i class="fa fa-user"></i> <%= t(".profile", default: "My bathrooms") %>
               <% end %>
             </li>
