--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -43,7 +43,12 @@
               <% end %>
             </li>
             <li>
-              <%= link_to bathrooms_path do %>
+              <%= link_to user_bookings_path(current_user) do %>
+                  <i class="fa fa-home"></i> <%= t(".profile", default: "My bookings") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to  do %>
                   <i class="fa fa-home"></i> <%= t(".profile", default: "Bathrooms") %>
               <% end %>
             </li>
@@ -93,7 +98,7 @@
           <% end %>
         </li>
         <li>
-          <%= link_to bathrooms_path do %>
+          <%= link_to  do %>
               <i class="fa fa-home"></i> <%= t(".profile", default: "Bathrooms") %>
           <% end %>
         </li>
