--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -8,7 +8,7 @@
           <p>Name: <%= booking.user.name%></p>
           <p>Address: <%= booking.bathroom.address %></p>
           <p>Price: <%= booking.price %>€</p>
-          <p>Boook date: <%= @booking.book_time.strftime("%d %m %Y, %Hh%M") %></p>
+          <p>Boook date: <%= booking.book_time.strftime("%d %m %Y, %Hh%M") %></p>
         </div>
       </div>
     </div>
