--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -48,7 +48,7 @@
               <% end %>
             </li>
             <li>
-              <%= link_to  do %>
+              <%= link_to bathrooms_path do %>
                   <i class="fa fa-home"></i> <%= t(".profile", default: "Bathrooms") %>
               <% end %>
             </li>
@@ -82,32 +82,37 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li>
-          <%= link_to users_show_path(current_user) do %>
-            <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to edit_user_registration_path do %>
-            <i class="fa fa-user"></i> <%= t(".profile", default: "Edit profile") %>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to  do %>
-            <i class="fa fa-user"></i> <%= t(".profile", default: "My bathrooms") %>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to  do %>
-              <i class="fa fa-home"></i> <%= t(".profile", default: "Bathrooms") %>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to destroy_user_session_path, method: :delete do %>
-            <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-          <% end %>
-        </li>
-      </ul>
+            <li>
+              <%= link_to users_show_path(current_user) do %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to edit_user_registration_path do %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "Edit profile") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to users_bathrooms_path do %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "My bathrooms") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to user_bookings_path(current_user) do %>
+                  <i class="fa fa-home"></i> <%= t(".profile", default: "My bookings") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to bathrooms_path do %>
+                  <i class="fa fa-home"></i> <%= t(".profile", default: "Bathrooms") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to destroy_user_session_path, method: :delete do %>
+                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+              <% end %>
+            </li>
+          </ul>
     </div>
   </div>
 </div>
